--- a/CameraXDemo/build.gradle
+++ b/CameraXDemo/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
-    ext.coroutines_version = '1.1.1'
+    ext.kotlin_version = '1.3.72'
+    ext.coroutines_version = '1.3.3'
     ext.appcompat_version = "1.1.0"
-    ext.material_version = "1.0.0"
-    ext.ktx_version = "1.1.0"
+    ext.material_version = "1.1.0"
+    ext.ktx_version = "1.2.0"
     ext.constraintlayout_version = "1.1.3"
-    ext.camerax_version = "1.0.0-alpha06"
-    ext.camerax_ext_version = "1.0.0-alpha03"
-    ext.navigation_version = "2.2.0-beta01"
-    ext.lifecycle_version = "2.2.0-rc01"
-    ext.viewpager_version = "1.0.0-rc01"
-    ext.glide_version = "4.9.0"
+    ext.camerax_version = "1.0.0-beta03"
+    ext.camerax_ext_version = "1.0.0-alpha10"
+    ext.navigation_version = "2.2.0"
+    ext.lifecycle_version = "2.2.0"
+    ext.viewpager_version = "1.0.0"
+    ext.glide_version = "4.11.0"
 
     repositories {
         google()
@@ -19,8 +19,8 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.2"
     }
 }
 
